kubernetes/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: abacus
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: abacus
        tier: backend
        track: stable
    spec:
      containers:
        - name: backend
          image: "ghcr.io/acm-mu/abacus/backend:latest"
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:           
               memory: "1Gi"
               cpu: "500m"
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: abacus
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
  type: ClusterIP
