kubernetes/back-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ing-rules
spec:
  ingressClassName: nginx
  rules:
  - host: api-staging.codeabac.us
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 80
